--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
     "gsap": "^3.12.7",
+    "lenis": "^1.2.3",
     "lightningcss": "^1.29.3",
     "lucide-react": "^0.484.0",
     "next": "^15.2.4",
